clusters/my-cluster/apps/staging/infrastructure/argocd/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd-staging
  labels:
    istio-injection: enabled
