clusters/my-cluster/apps/staging/infrastructure/argocd/test-service-metallb.yaml
apiVersion: v1
kind: Service
metadata:
  name: lb-test
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: non-existent-app # This is fine just for IP testing
