clusters/my-cluster/apps/staging/infrastructure/argocd/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd-staging-virtualservice
  namespace: argocd-staging
spec:
  hosts:
  - "argocd-staging.yourdomain.com"
  gateways:
  - argocd-staging-gateway
  http:
  - route:
    - destination:
        host: argocd-server
        port:
          number: 80
